// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature is disabled Unleash snaphot-test 1`] = `
<div>
  Not hello, the feature is disabled
</div>
`;

exports[`feature is enabled Unleash snaphot-test 1`] = `
<div>
  Hello, the feature is enabled
</div>
`;

exports[`no set feature toggles 1`] = `
<div>
  Not hello, the feature is disabled
</div>
`;

exports[`no such feature Unleash snaphot-test 1`] = `
<div>
  Not hello, the feature is disabled
</div>
`;
